# src/main/java/com/bnm/personservice/mapper/api/CountryApiMapper.java
@@ -5,6 +5,7 @@ import com.bnm.personservice.model.CountryRequest;
 import com.bnm.personservice.model.CountryResponse;
 import com.bnm.personservice.service.domain.Country;
 import org.hibernate.envers.RevisionType;
+import org.mapstruct.BeanMapping;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
@@ -16,8 +17,6 @@ import java.time.ZoneOffset;
 @Mapper(componentModel = "spring")
 public interface CountryApiMapper {
 
-    @Mapping(source = "createdAt", target = "created", qualifiedByName = "instantToOffsetDateTime")
-    @Mapping(source = "updatedAt", target = "updated", qualifiedByName = "instantToOffsetDateTime")
     CountryResponse toResponse(Country domain);
 
     @Mapping(target = "id", ignore = true)
@@ -27,12 +26,8 @@ public interface CountryApiMapper {
     @Mapping(target = "updatedBy", ignore = true)
     Country toDomain(CountryRequest request);
 
-
+    @BeanMapping(ignoreByDefault = true)
     @Mapping(source = "domain.id", target = "id")
-    @Mapping(source = "domain.name", target = "name")
-    @Mapping(source = "domain.alpha2", target = "alpha2")
-    @Mapping(source = "domain.alpha3", target = "alpha3")
-    @Mapping(source = "domain.status", target = "status")
     @Mapping(source = "revisionNumber", target = "revisionNumber", qualifiedByName = "numberToInteger")
     @Mapping(source = "revisionType", target = "revisionType", qualifiedByName = "mapRevisionType")
     @Mapping(source = "revisionInstant", target = "revisionInstant", qualifiedByName = "instantToOffsetDateTime")
